fix issues with footer covering UI elements on desktop

--- a/src/App.scss
+++ b/src/App.scss
@@ -843,8 +843,12 @@ nav {
     }
   }
 
+  section {
+    margin-bottom: 60px;
+  }
+
   footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
